--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@fontsource/lato": "^5.2.6",
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
@@ -34,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-i18next": "^15.7.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.8.1",
     "tailwind-merge": "2.5.4",
     "tailwindcss-animate": "1.0.7"
