--- a/package.json
+++ b/package.json
@@ -26,17 +26,26 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "i18next": "^25.4.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.453.0",
     "next-intl": "^4.3.4",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-i18next": "^15.7.1",
+    "react-international-phone": "^4.6.0",
     "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^6.30.1",
+    "react-select": "^5.10.2",
+    "react-select-country-list": "^2.2.3",
+    "react-time-picker": "^8.0.2",
     "tailwind-merge": "2.5.4",
     "tailwindcss-animate": "1.0.7"
   },
